<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddDetails"
    android:background="@color/back">

    <LinearLayout
        android:layout_width="411dp"
        android:layout_height="729dp"
        android:orientation="vertical"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:text="@string/name"
            android:textColor="@color/colorAccent"
            android:layout_marginTop="20dp"/>

        <EditText
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@color/back"
            android:hint="@string/name"
            android:inputType="textPersonName"
            android:padding="10dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:text="@string/mobile"
            android:textColor="@color/colorAccent" />

        <EditText
            android:id="@+id/et_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@color/back"
            android:hint="@string/mobile"
            android:inputType="phone"
            android:maxLength="10"
            android:padding="10dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:text="@string/email"
            android:textColor="@color/colorAccent" />

        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@color/back"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="10dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:text="@string/address"
            android:textColor="@color/colorAccent" />

        <EditText
            android:id="@+id/et_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@color/back"
            android:hint="@string/address"
            android:inputType="textPostalAddress"
            android:padding="10dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:text="@string/city"
            android:textColor="@color/colorAccent" />

        <EditText
            android:id="@+id/et_city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@color/back"
            android:hint="@string/city"
            android:inputType="textPostalAddress"
            android:padding="10dp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/des"
            android:textColor="@color/colorAccent"/>

            <EditText
                android:id="@+id/et_Desceip"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:layout_margin="10dp"
                android:background="@color/back"
                android:hint="Add your Description"
                android:inputType="textPostalAddress"
                android:padding="10dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:text="add your Image"
            android:textColor="@color/colorAccent"
            android:layout_marginTop="10dp"/>

        <Button
            android:id="@+id/bt_logo"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_gravity="left"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="10dp"
            android:background="@color/colorAccent"
            android:text="@string/logo"
            android:textColor="@color/back" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:text="Add Image Here :"
            android:textColor="@color/colorAccent"
            android:layout_marginTop="10dp"/>

        <Button
            android:id="@+id/bt_select"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_gravity="left"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="10dp"
            android:background="@color/colorAccent"
            android:text="@string/photo"
            android:textColor="@color/back" />

        <Button
            android:id="@+id/bt_submit"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_gravity="right"
            android:layout_marginTop="10dp"
            android:layout_marginRight="5dp"
            android:background="@color/colorAccent"
            android:text="@string/post"
            android:textColor="@color/back" />

    </LinearLayout>

</>